--- a/prop.properties
+++ b/prop.properties
@@ -2,3 +2,5 @@ user=root
 password=
 dburl=jdbc:mysql://localhost:3306/mentevida
 driver=com.mysql.cj.jdbc.Driver
+winuploads=C:\\Uploads
+linuploads=
