--- a/prop.properties
+++ b/prop.properties
@@ -3,4 +3,4 @@ password=
 dburl=jdbc:mysql://localhost:3306/mentevida
 driver=com.mysql.cj.jdbc.Driver
 winuploads=C:\\Uploads
-linuploads=
+linuploads=/home/kuroneko/Dev/Uploads/
