--- a/prop.properties
+++ b/prop.properties
@@ -2,5 +2,5 @@ user=root
 password=
 dburl=jdbc:mysql://localhost:3306/mentevida
 driver=com.mysql.cj.jdbc.Driver
-winuploads=C:\\Uploads
+winuploads=C:\\Uploads\\
 linuploads=/home/kuroneko/Dev/Uploads/
