file management fix

--- a/rename to prop.properties
+++ b/rename to prop.properties
@@ -1,15 +1,22 @@
 # Renomeie este arquivo para 'prop.properties'
 
 # usuário e senha do banco de dados
+
 user=
 password=
 
 # url da database
+
 dburl=jdbc:mysql://localhost:3306/mentevida
 
 # lembre de adicionar o arquivo jar do driver em caso de mudança
+
 driver=com.mysql.cj.jdbc.Driver
 
-# pasta de upload de arquivos, lembre de adicionar duas contra barras (\\) no windows
+# pasta de upload de arquivos, lembre de adicionar duas contra barras (\\) no windows e inserir a barra no início e no final. 
+# Ex: 
+# C:\\Dev\\Uploads\\
+# /home/usuario/dev/uploads/
+
 winuploads=
 linuploads=
